# portable-simd

./: .travis.yml  CONTRIBUTING.md  README.md  beginners-guide.md  crates.js  help.html  main.js  rust-toolchain.toml  search-index.js  settings.html  source-files.js  src-files.js
core_simd/: all.html  enum.Which.html  (+256 more)
crates/core_simd/: Cargo.toml
crates/core_simd/benches/: mask_count.rs
crates/core_simd/examples/: README.md  dot_product.rs  fma.rs  mask_count.rs  matrix_inversion.rs  nbody.rs  spectral_norm.rs
crates/core_simd/src/: alias.rs  comparisons.rs  eq.rs  first.rs  fmt.rs  intrinsics.rs  iter.rs  lib.rs  macros.rs  masks.rs  math.rs  mod.rs  ops.rs  ord.rs  permute.rs  reduction.rs  round.rs  select.rs  swizzle.rs  swizzle_dyn.rs  to_bytes.rs  vector.rs  vectorize.rs  vendor.rs
crates/core_simd/src/elements/: const_ptr.rs  float.rs  int.rs  mut_ptr.rs
crates/core_simd/src/masks/: bitmask.rs  full_masks.rs  to_bitmask.rs
crates/core_simd/src/ops/: assign.rs  deref.rs  splat.rs  unary.rs
crates/core_simd/src/simd/: prelude.rs  ptr.rs
crates/core_simd/src/simd/cmp/: eq.rs  ord.rs
crates/core_simd/src/simd/num/: float.rs  int.rs  uint.rs
crates/core_simd/src/simd/ptr/: const_ptr.rs  mut_ptr.rs
crates/core_simd/src/vector/: float.rs  int.rs  ptr.rs  uint.rs
crates/core_simd/tests/: cast.rs  dot_product.rs  f16_ops.rs  fma.rs  generic_aliases.rs  hexagon_hvx.rs  i16_ops.rs  masked_load_store.rs  masks.rs  ops_macros.rs  permute.rs  pointers.rs  round.rs  swizzle.rs  to_bytes.rs
crates/core_simd/tests/ops_impl/: float_macros.rs  mod.rs
(+1424 files in other folders)
